Fixing alignment

--- a/src/containers/PostList.css
+++ b/src/containers/PostList.css
@@ -123,5 +123,6 @@
 }
 
 .comment-list {
-  margin-top: 30px;
+  margin-top: 35px;
+  cursor: auto;
 }
